# PhysiClaw

./: .gitignore  .markdownlint.json  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  install.ps1  install.sh  pyproject.toml
.claude/skills/: jd  open-app  wechat
.claude/skills/calibrate-keyboard/: SKILL.md
.claude/skills/cron/: SKILL.md
.claude/skills/phone-setup/: SKILL.md
.claude/skills/setup/: SKILL.md
.claude/skills/setup-vision-models/: SKILL.md
.claude/skills/step-to-build123d/: SKILL.md
.github/workflows/: ci.yml  deploy-docs.yml  sync-install-scripts.yml
agent/: jobs.py
agent/context/: AGENT.md  CONVENTION.md  JOBS.md  PHYSICLAW.md  SCHEMA.md  SOUL.md
agent/engine/: __init__.py  builtin_tool.py  compact.py  dto.py  engine.py  job_store.py  jobs.py  mcp_inventory.py  mcp_tool.py  memory.py  plan.py  prompt.py  provider.py  trace.py  validator.py
agent/hooks/: cron.py
agent/instructions/: AGENT.md  CONVENTION.md  SCHEMA.md  response_schema.md
agent/runtime/: __main__.py  claude.py  config.py  launcher.py  runtime.py
firmware/: fluidnc_config.yml  installation_guide.md
hardware/: README.md  __main__.py
hardware/assembly/: base.py  bom.py  build_procedures.py  cache.py  camera.py  dispatch.py  mark_assembly_step.py  projection.py  render.py  step01_solenoid_tip.py  svg_utils.py  techdraw.md  travel_ranges.py
hardware/assembly/mark/: __init__.py  __main__.py  index.html  patch.py  replay.py  server.py  svg.py  validate.py
hardware/assembly/patch/: belt_10_motor_a_exploded_cam0.json  belt_11_clamp_show_assembled_cam0.json  belt_11_clamp_show_assembled_cam1.json  belt_20_clamp_assembled_cam0.json  belt_20_clamp_exploded_cam1.json  belt_30_motor_b_assembled_cam0.json  belt_30_motor_b_exploded_cam0.json  board_10_holder_tnut_exploded_cam1.json  board_20_frame_assembled_cam0.json  board_20_frame_assembled_cam1.json  board_30_pcb_assembled_cam0.json  board_30_pcb_exploded_cam1.json  board_32_tube_holder_assembled_cam0.json  board_32_tube_holder_assembled_cam1.json  board_40_teflon_assembled_cam0.json  camera_10_bracket_exploded_cam1.json  camera_40_frame_assembled_cam0.json  camera_40_frame_assembled_cam1.json  frame_10_extrusion_tnut_exploded_cam0.json  frame_20_SHCS_exploded_cam0.json  frame_30_bracket_tnut_exploded_cam0.json  frame_31_bracket_assembled_cam0.json  frame_40_bumper_tnut_exploded_cam0.json  frame_41_bumper_assembled_cam0.json  idler_12_lu_assembled_cam0.json  idler_12_lu_exploded_cam1.json  idler_22_ru_assembled_cam0.json  idler_22_ru_exploded_cam1.json  idler_31_ld_assembled_cam0.json  idler_31_ld_exploded_cam1.json  idler_41_rd_assembled_cam0.json  idler_41_rd_exploded_cam1.json  linear_10_y_exploded_cam0.json  linear_11_y_assembled_cam0.json  linear_11_y_exploded_cam1.json  linear_20_joint_assembled_cam0.json  linear_20_joint_exploded_cam1.json  linear_30_x_assembled_cam1.json  linear_30_x_exploded_cam1.json  linear_31_x_exploded_cam1.json  (+24 more)
hardware/assembly/procedures/: belt_10_motor_a.py  belt_11_clamp_show.py  belt_20_clamp.py  belt_30_motor_b.py  board_10_holder_tnut.py  board_20_frame.py  board_30_pcb.py  board_31_tube_tnut.py  board_32_tube_holder.py  board_40_teflon.py  bracket_frame.py  bracket_tnut.py  bumper_tnut.py  camera_10_bracket.py  camera_20_gooseneck.py  camera_30_mount.py  camera_40_frame.py  extrusion_tnut.py  fastener_10_BHCS.py  fastener_11_SHCS.py  fastener_12_FHCS.py  fastener_20_square_nut.py  fastener_21_hex_nut.py  fastener_22_tnut_standard.py  fastener_23_tnut_hammer.py  fastener_30_pulley.py  fastener_31_idler.py  (+55 more)
hardware/bom/: bom.md  bom.py
hardware/manual/: build_manual.py  build_sourcing_guide.py  icon_svg.py  manual.html  sourcing_styles.css  sourcing_vendors.json  styles.css
hardware/parts/: __init__.py  _fc.py  _fits.py  _helpers.py  base.py  build_custom.py  build_custom_parts.py  build_standard.py  export_custom.py  export_standard.py
hardware/scripts/: build_all_b3d.py  build_all_fc.py  render_views.py
physiclaw/: main.py
physiclaw/bridge/: handler.py
physiclaw/core/: orchestrator.py
physiclaw/hardware/: camera.py
physiclaw/server/: mcp.py  tools.py  types.py  warm_start.py
physiclaw/vision/: util.py
scripts/: calibrate_keyboard.py  download_omniparser.py  dump_prompt.py  grbl_jog.py  grbl_jog_x.py  grbl_solenoid_test.py  setup.py
skills/jd/: SKILL.md
skills/open-app/: SKILL.md
skills/search-in-app/: SKILL.md
skills/wechat/: SKILL.md
src/physiclaw/: __init__.py  config.py  paths.py  runtime_state.py  text.py
tests/: TEST.md  _AUDIT.md  _PLAN.md  conftest.py  test_config.py  test_paths.py  test_runtime_state.py
tests/cli/: test__format.py  test_cli_config.py  test_cli_init.py  test_doctor.py  test_init.py  test_models.py  test_server.py  test_skills.py  test_status.py  test_uninstall.py  test_update_check.py
(+302 files in other folders)
