[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "physiclaw"
version = "0.1.0"
description = "Add your description here"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyserial>=3.5",
    "opencv-python>=4.8",
    "numpy>=1.26",
    "mcp[cli]>=1.2",
    "croniter>=6.2.2",
    "rapidocr>=3.7.0",
    "onnxruntime>=1.24.0",
]

[dependency-groups]
convert = ["ultralytics", "onnx", "onnxslim>=0.1.71"]
stylus = ["manifold3d>=3.4.0", "trimesh>=4.11.4"]
drawing = ["reportlab>=4.4.10", "fonttools>=4.62"]
dev = [
    "ruff>=0.15.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/physiclaw"]

[project.scripts]
physiclaw = "physiclaw.core.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
