[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "physiclaw"
version = "0.1.5"
description = "Give AI agents a physical finger to operate any phone — robotic stylus + camera, no APIs needed."
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Qiao Qian", email = "qiaoqianda@gmail.com" }]
keywords = ["robotics", "mcp", "llm-agent", "phone-automation", "vision", "stylus", "grbl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]
dependencies = [
    "pyserial>=3.5",
    "opencv-python>=4.8",
    "numpy>=1.26",
    "mcp[cli]>=1.2",
    "croniter>=6.2.2",
    "rapidocr>=3.7.0",
    "onnxruntime>=1.24.0",
    "typer>=0.12",
    "tomlkit>=0.13",
    "anthropic>=0.40",
]

[project.urls]
Homepage = "https://github.com/physiclaw/PhysiClaw"
Repository = "https://github.com/physiclaw/PhysiClaw"
Issues = "https://github.com/physiclaw/PhysiClaw/issues"

[dependency-groups]
stylus = ["manifold3d>=3.4.0", "trimesh>=4.11.4"]
drawing = ["reportlab>=4.4.10", "fonttools>=4.62"]
cad = ["build123d>=0.7"]
dev = [
    "ruff>=0.15.9",
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-mock>=3.14",
    "pytest-asyncio>=0.23",
    "freezegun>=1.5",
    "hypothesis>=6.100",
    "respx>=0.21",
    "mutmut>=2.5,<3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/physiclaw"]

[project.scripts]
physiclaw = "physiclaw.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "slow: tests that take >100ms each — excluded from default fast run",
    "integration: tests that require real hardware or external services — excluded from default fast run",
]
addopts = "-ra --strict-markers -m 'not slow and not integration'"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src/physiclaw"]
omit = [
    "src/physiclaw/agent/runtime/__main__.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "pragma: no cover",
]
